<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/topMarginLinearH"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/topMarginLinearH" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/hello" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_saludar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/topMarginLinearH"
            android:layout_marginRight="@dimen/topMarginLinearH"
            android:text="@string/toast_msg" />

        <Button
            android:id="@+id/btn_web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/topMarginLinearH"
            android:layout_marginRight="@dimen/topMarginLinearH"
            android:text="@string/load_webview" />

        <Button
            android:id="@+id/btn_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list" />

        <Button
            android:id="@+id/btn_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_student" />

    </LinearLayout>

</RelativeLayout>
